Check todo list

--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 풀리퀘 하면 이거 자동으로 되는거임?
-빌드 깨뜨리는 풀리퀘 거르는 법
+빌드 깨뜨리는 풀리퀘 거르는 법 -- 자동으로 되는 거고 보고 거르면 됨.
 
-CI status 뱃지 박는 법
+CI status 뱃지 박는 법 -- 박았음
 
-dev branch 쓰는 법 - dev를 디폴트로 설정하면 되려나?
+dev branch 쓰는 법 - dev를 디폴트로 설정하면 되려나? -- 이거 했음
 
-여러줄 테스트 가능?
+여러줄 테스트 가능? -- ???
